--- a/webapp/index.html
+++ b/webapp/index.html
@@ -14,6 +14,7 @@
         id="sap-ui-bootstrap"
         src="resources/sap-ui-core.js"
         data-sap-ui-theme="sap_horizon"
+        data-sap-ui-libs="sap.m,sap.ui.core,sap.f"
         data-sap-ui-resource-roots='{
             "ehsm898": "./"
         }'
